[package]
name = "sos"
version = "0.1.0"
authors = ["WinkMakers <email@wingmake.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt="~0.2"
microbit="~0.7"
cortex-m-rt="~0.6"

[profile.dev]
debug = true
opt-level = 0
